--- a/docs/docs/sample-scripts/entra/find-obsolete-m365-groups/index.mdx
+++ b/docs/docs/sample-scripts/entra/find-obsolete-m365-groups/index.mdx
@@ -194,7 +194,7 @@ Use this script to create a report of all M365 groups that are possibly obsolete
 
     if ($owners.Count -le 1 -and ($members.Count + $guests.Count) -eq 0) {
       Write-Host "  → potentially obsolete (abandoned group: only $($owners.Count) owner left)" -ForegroundColor Yellow
-      $reason = "Low user count"
+      $reason = "Low owner count"
       
       $Group.Membership.Status = "Abandoned ($reason)"
       $Group.TestStatus = "🟡 Warning"
