Updates version to v10.3

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,7 +4,7 @@ sidebar_position: 4
 
 # Release notes
 
-## v10.2.0 (Beta)
+## [v10.2.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.2.0)
 
 ### New commands
 
@@ -20,7 +20,7 @@ sidebar_position: 4
 
 **SharePoint Embedded:**
 
-- [spo container get](../cmd/spe/container/container-get.mdx) - gets a container of a specific container type [#6083](https://github.com/pnp/cli-microsoft365/issues/6083)
+- [spe container get](../cmd/spe/container/container-get.mdx) - gets a container of a specific container type [#6083](https://github.com/pnp/cli-microsoft365/issues/6083)
 
 **SharePoint Premium:**
 
