--- a/docs/docs/cmd/exo/approleassignment/approleassignment-add.mdx
+++ b/docs/docs/cmd/exo/approleassignment/approleassignment-add.mdx
@@ -2,14 +2,14 @@ import Global from '/docs/cmd/_global.mdx';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-# exo role assignment add
+# exo approleassignment add
 
 Grants permissions to an application that's accessing data in Exchange Online and specify which mailboxes an app can access.
 
 ## Usage
 
 ```sh
-m365 exo role assignment add [options]
+m365 exo approleassignment add [options]
 ```
 
 ## Options
@@ -149,3 +149,22 @@ m365 exo approleassignment add --roleDefinitionName 'Application Calendars.Read'
 ## More information
 
 - Role assignment: https://learn.microsoft.com/graph/api/rbacapplication-post-roleassignments?view=graph-rest-beta
+
+The table below lists the available roles and their corresponding ids that are accepted by the `roleDefinitionId` and `roleDefinitionName` parameters.
+
+|Role Definition Id | Role Definition Name |
+| --- | --- |
+|1f704712-7d46-481f-b2cd-dbcc978c4f2a|Application Mail.Read|
+|3eca55c8-0e73-4c12-81bf-526549f2e5a3|Application Mail.ReadBasic|
+|82fd214e-61ca-4dc7-98f6-090700bdb205|Application Mail.ReadWrite|
+|8679f4ff-c91d-40d0-809c-c86d114821a5|Application Mail.Send|
+|c40299e0-2107-455f-85dd-6e8862c3a0cc|Application MailboxSettings.Read|
+|459cb245-07c5-44f1-8133-3da40b4b6197|Application MailboxSettings.ReadWrite|
+|a3123d4e-4256-4ad0-bef0-205a00807fae|Application Calendars.Read|
+|b92761c0-5311-4908-92ca-2c1f8c71aa1c|Application Calendars.ReadWrite|
+|9b87c446-d3c1-4146-9d39-45ae63b4eeb7|Application Contacts.Read|
+|265cabb3-13d9-4e05-b2cd-460cfa7ad3cc|Application Contacts.ReadWrite|
+|b49ae303-7a8f-4ba1-aa37-27b40461aabb|Application Mail Full Access|
+|48d6a78c-0681-4d73-acec-9f9ffad56ddb|Application Exchange Full Access|
+
+More info about supported application roles: https://learn.microsoft.com/exchange/permissions-exo/application-rbac#supported-application-roles
