--- a/docs/docs/cmd/spo/tenant/tenant-homesite-add.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-homesite-add.mdx
@@ -14,7 +14,22 @@ m365 spo tenant homesite add [options]
 
 ## Options
 
-<Global />
+```md definition-list
+`-u, --url <url>`
+: URL of the site to set as the home site.
+
+`--isInDraftMode [isInDraftMode]`
+: Specifies whether the home site is in draft mode. Accepts `true` or `false`.
+
+`--vivaConnectionsDefaultStart [vivaConnectionsDefaultStart]`
+: Specifies whether the home site is the default start for Viva Connections. Accepts `true` or `false`.
+
+`--audiences [audiences]`
+: Comma-separated list of audience GUIDs.
+
+`--order [order]`
+: Order of the home site. Must be an integer.
+```
 
 ## Examples
 
@@ -22,9 +37,13 @@ Add a Home Site
 
 ```sh
 m365 spo tenant homesite add --url "https://contoso.sharepoint.com/sites/testcomms"
-
 ```
 
+Add a Home Site with optional parameters
+
+```sh
+m365 spo tenant homesite add --url "https://contoso.sharepoint.com/sites/testcomms" --isInDraftMode true --vivaConnectionsDefaultStart false --audiences "af8c0bc8-7b1b-44b4-b087-ffcc8df70d16,754ff15c-76b1-44cb-88c7-0065a4d3cfb7" --order 2 
+```
 ## Response
 
 <Tabs>
