add preamble to enforce strict mode on script run

--- a/docs/docs/sample-scripts/entra/find-obsolete-m365-groups/index.mdx
+++ b/docs/docs/sample-scripts/entra/find-obsolete-m365-groups/index.mdx
@@ -31,6 +31,7 @@ Use this script to create a report of all M365 groups that are possibly obsolete
 
   ```powershell
   $ErrorActionPreference = "Stop"
+  Set-StrictMode -Version Latest
 
   class GroupInfo {
     [PSCustomObject] $Reference
