--- a/docs/docs/sample-scripts/entra/find-obsolete-m365-groups/index.mdx
+++ b/docs/docs/sample-scripts/entra/find-obsolete-m365-groups/index.mdx
@@ -181,7 +181,7 @@ Use this script to create a report of all M365 groups that are possibly obsolete
       Write-Host "  → potentially obsolete (abandoned group: no owner)" -ForegroundColor Yellow
       $reason = "Low user count"
         
-      $Group.Membership.Status = "Abandoned ($reason)"
+      $Group.Membership | Add-Member -MemberType NoteProperty -Name Status -Value "Abandoned ($reason)"
       $Group.TestStatus = "🟡 Warning"
       $Group.Reasons += $reason
         
@@ -196,7 +196,7 @@ Use this script to create a report of all M365 groups that are possibly obsolete
       Write-Host "  → potentially obsolete (abandoned group: only $($Group.Membership.Owners.Count) owner left)" -ForegroundColor Yellow
       $reason = "Low owner count"
       
-      $Group.Membership.Status = "Abandoned ($reason)"
+      $Group.Membership | Add-Member -MemberType NoteProperty -Name Status -Value "Abandoned ($reason)"
       $Group.TestStatus = "🟡 Warning"
       $Group.Reasons += $reason
       
