Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,6 +4,25 @@ sidebar_position: 4
 
 # Release notes
 
+## v10.3.0 (Beta)
+
+### New commands
+
+**SharePoint:**
+
+- [spo list defaultvalue list](../cmd/spo/list/list-defaultvalue-list.mdx) - retrieves default column values for a specific document library [#6404](https://github.com/pnp/cli-microsoft365/issues/6404)
+
+### Changes
+
+- fixed singular option reference in 'entra approleassignment remove' [#6551](https://github.com/pnp/cli-microsoft365/issues/6551)
+- updated 'spo file roleassignment' command [#6197](https://github.com/pnp/cli-microsoft365/issues/6197)
+- enhanced 'spo listitem roleassignment' commands with Microsoft Entra groups [#6195](https://github.com/pnp/cli-microsoft365/issues/6195)
+- enhanced 'spo web roleassignment' commands with Microsoft Entra groups [#6193](https://github.com/pnp/cli-microsoft365/issues/6193)
+- enhanced 'spo folder roleassignment' commands with Microsoft Entra groups [#6196](https://github.com/pnp/cli-microsoft365/issues/6196)
+- added Bluesky to docs
+- fixed retrieving distribution groups [#6529](https://github.com/pnp/cli-microsoft365/issues/6529)
+- fixed login validation for system-assigned managed identity [#6527](https://github.com/pnp/cli-microsoft365/issues/6527)
+
 ## [v10.2.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.2.0)
 
 ### New commands
