Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -8,6 +8,18 @@ sidebar_position: 4
 
 ### New commands
 
+**Entra ID:**
+
+- [entra pim role assignment remove](../cmd/entra/pim/pim-role-assignment-remove.mdx) - requests deactivation of an Entra role assignment for a user or group [#5841](https://github.com/pnp/cli-microsoft365/issues/5841)
+
+**Exchange Online:**
+
+- [exo approleassignment add](../cmd/exo/approleassignment/approleassignment-add) - grants permissions to an application that's accessing data in Exchange Online and specify which mailboxes an app can access. [#5988](https://github.com/pnp/cli-microsoft365/issues/5988)
+
+**Power Platform:**
+
+- [pp website get](../cmd/pp/website/website-get.mdx) - gets information about a Power Pages website. [#6259](https://github.com/pnp/cli-microsoft365/issues/6259)
+
 **SharePoint:**
 
 - [spo list defaultvalue list](../cmd/spo/list/list-defaultvalue-list.mdx) - retrieves default column values for a specific document library [#6404](https://github.com/pnp/cli-microsoft365/issues/6404)
