--- a/docs/docs/sample-scripts/entra/entra-remove-oauth2-permission-grants/index.mdx
+++ b/docs/docs/sample-scripts/entra/entra-remove-oauth2-permission-grants/index.mdx
@@ -21,7 +21,7 @@ When a user has been granted permissions to an application registration, it can 
 This script will remove all OAuth2 permission grants that have been assigned to a specified application registration and are granted to user(s).
 It also provides the option to remove all permissions or permission consents that have been granted by an administrator.
 
-The script first defines a function `Remove-UserPermissionsGrants` that does the necessary work described above and then calls this function with a predefined app registration name.
+The script first defines a function `Remove-PermissionsGrants` that does the necessary work described above and then calls this function with a predefined app registration name.
 
 <Tabs>
   <TabItem value="PowerShell">
@@ -46,16 +46,16 @@ The script first defines a function `Remove-UserPermissionsGrants` that does the
     Default value is: 'Granted By User'
 
   .EXAMPLE
-    Remove-UserPermissionsGrants -appRegistrationName "My App"
-    Removes all user-consented permission grants for the application "My App"
+    Remove-PermissionsGrants -appRegistrationName "My App"
+    Removes all user-consented permission grants for the enterprise application "My App"
 
   .EXAMPLE
-    Remove-UserPermissionsGrants -appRegistrationName "My App" -GrantType "All"
-    Removes all permission grants (both admin and user consented) for the application "My App"
+    Remove-PermissionsGrants -appRegistrationName "My App" -GrantType "All"
+    Removes all permission grants (both admin and user consented) for the enterprise application "My App"
 
   .EXAMPLE
-    Remove-UserPermissionsGrants -appRegistrationName "My App" -GrantType "By Admin"
-    Removes only admin-consented permission grants for the application "My App"
+    Remove-PermissionsGrants -appRegistrationName "My App" -GrantType "By Admin"
+    Removes only admin-consented permission grants for the enterprise application "My App"
 
   .NOTES
     Prerequisites:
@@ -113,7 +113,7 @@ The script first defines a function `Remove-UserPermissionsGrants` that does the
 
   # Set the app registration name for which to remove user consents
   $appRegistrationName = 'My App'
-  Remove-UserPermissionsGrants -appRegistrationName $appRegistrationName
+  Remove-PermissionsGrants -appRegistrationName $appRegistrationName
   ```
 
   </TabItem>
