update descriptions to denote the necessary permissions (based on least privileged permissions approach)

--- a/docs/docs/sample-scripts/entra/entra-remove-oauth2-permission-grants/index.mdx
+++ b/docs/docs/sample-scripts/entra/entra-remove-oauth2-permission-grants/index.mdx
@@ -14,11 +14,11 @@ import TabItem from '@theme/TabItem';
 
 Author: [Tobias Maestrini](https://github.com/tmaestrini)
 
-From an administrator's perspective, managing OAuth2 permission grants that have been assigned to an enterprise application (used in a multi-tenant app or your own app registration) can be a challenging task.
+From an administrator's perspective, managing OAuth2 permission grants that have been assigned to an enterprise application (based on an app registration or a multi-tenant app) can be a challenging task.
 Sometimes it is necessary to remove **permissions that are granted to users** – for example when only administrators should define which permissions are granted to an enterprise app.
 When a user has been granted permissions to an enterprise application, it can be important to remove these permissions as soon as possible to prevent unauthorized access in API requests.
 
-This script will find and remove all OAuth2 permission grants that have been assigned to a specific enterprise application; either by admin consent, user consent, or both.
+This script will find and remove all OAuth2 permission grants (delegated permissions) that have been assigned to a specific enterprise application; either by admin consent, user consent, or both.
 It first defines the function `Remove-PermissionsGrants` that does the necessary work described above and then calls this function with a parameter to select a specific enterprise app.
 
 <Tabs>
@@ -30,7 +30,7 @@ It first defines the function `Remove-PermissionsGrants` that does the necessary
     Removes OAuth2 permission grants in a specific enterprise application (or service principal) in Entra ID.
 
   .DESCRIPTION
-    Find and remove all OAuth2 permissions assigned to a specific enterprise application by selecting one of the following removal options: **All permissions** / Permissions granted **by an administrator** / Permissions granted **to users**.
+    Find and remove all OAuth2 permissions assigned to a specific enterprise application by selecting one of the following removal options: **All permissions** / Permissions granted **by an administrator** / Permissions consented to **by users**.
     This function finds and removes OAuth2 permission grants (delegated permissions) assigned to a specific enterprise application.
     It can filter and remove permissions based on how they were granted: either by admin consent, user consent, or both.
 
@@ -59,11 +59,13 @@ It first defines the function `Remove-PermissionsGrants` that does the necessary
 
   .NOTES
     Prerequisites:
-    - Microsoft 365 CLI (m365) must be installed and configured
-    - User must have appropriate permissions in Entra ID to manage OAuth2 permission grants (e.g. Global Admin)
+    - CLI for Microsoft 365 (m365) must be installed and configured
+    - The User must be assigned an appropriate Microsoft Entra role to manage OAuth2 permission grants (at least Application Developer, Cloud Application Administrator, User Administrator)
+      (see Microsoft Graph references: [list](https://learn.microsoft.com/en-us/graph/api/oauth2permissiongrant-list?view=graph-rest-1.0&tabs=http) and [delete](https://learn.microsoft.com/en-us/graph/api/oauth2permissiongrant-delete?view=graph-rest-1.0&tabs=http) permission grants)
+    - The Entra app registration used to sign into the CLI for Microsoft 365 must have an appropriate permission scope to manage permissions of other apps (at least `DelegatedPermissionGrant.ReadWrite.All`)
 
   .LINK
-    https://learn.microsoft.com/en-us/azure/active-directory/manage-apps/manage-application-permissions
+    https://learn.microsoft.com/en-us/entra/identity/enterprise-apps/manage-application-permissions?pivots=ms-powershell
   #>
 
   function Remove-PermissionsGrants {
