Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -35,6 +35,7 @@ sidebar_position: 4
 - fixed retrieving distribution groups [#6529](https://github.com/pnp/cli-microsoft365/issues/6529)
 - fixed login validation for system-assigned managed identity [#6527](https://github.com/pnp/cli-microsoft365/issues/6527)
 - fixed 'spo folder roleassignment add' command by removing incorrect breakroleinheritance functionality. Closes [#6555](https://github.com/pnp/cli-microsoft365/issues/6555)
+- added new sample script [Remove OAuth2 permission grants in a specific enterprise application (or service principal) in Entra ID](../sample-scripts/entra/entra-remove-oauth2-permission-grants/index.mdx) [#6537](https://github.com/pnp/cli-microsoft365/issues/6537)
 
 ## [v10.2.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.2.0)
 
