cleanup unnecessary code and white spaces

--- a/docs/docs/cmd/pp/pipeline/pipeline-list.mdx
+++ b/docs/docs/cmd/pp/pipeline/pipeline-list.mdx
@@ -11,7 +11,10 @@ Lists the Power Platform pipelines for the specified environment.
 ```sh
 m365 pp pipeline list [options]
 ```
-`-e, --environment <environment>`
+
+## Options
+
+`-e, --environmentName <environment>`
 : The name or id of the environment for which to list the pipelines.
 
 `--asAdmin`
